# praice

./: .gitignore  app.py  cloudbuild.yaml  demo_.ipynb  prices_format_example.json  pyproject.toml
Infrastructure/: Taskfile.yaml
Infrastructure/application_infra/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
Infrastructure/artifact_registry/: main.tf  terraform.tfstate  variables.tf
Test/: test_app.py
fastapi/: app.py  data_utils.py  docker-compose.yml  eda.ipynb  fastapi.Dockerfile  figures.py  ml.ipynb  model.py  model_testing.ipynb  model_utils.py  requirements.txt
fastapi/data/: insert-data.py
fastapi/models/: gradient_booster.py  ridge.py
