[project]
name = "PrAIse"
version = "0.1"
dependencies = [
    "requests",
    "google",
    "google-auth",
    "fastapi",
    "uvicorn[standard]",
    "psycopg2-binary",
    "pandas",
    "sqlalchemy",
    "matplotlib",
    "scikit-learn",
    "psycopg2",
    "asyncpg"
]

[metadata]
author = "Amani Attia"
description = "fastapi app"

[project.optional-dependencies]
dev = [
    "pytest==8.0.2",
    "httpx==0.27.0",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]